--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
 
       <label for="token">Token</label><br>
 
-      <input id="token" type="text" name="token" class = "form-control" ngModel>
+      <input id="token" type="text" name="token" class="form-control" ngModel>
 
     </div>
 
@@ -19,7 +19,7 @@
   </form>
 
   <H2>IOD Client Web Page</H2>
-  <iframe width="500" height="500" class="top-image" [src]="iframeUrl"></iframe>
+  <iframe id="iframe_demo" width="500" height="500" class="top-image" ></iframe>
 
 </div>
 
