added parameter option

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,15 +6,15 @@
 
     <div class="form-group">
 
-      <label for="token">Token</label><br>
+      <label for="srcUrl">iod src url</label><br>
 
-      <input id="token" type="text" name="token" class="form-control" ngModel>
+      <input id="srcUrl" type="text" name="srcUrl" class="form-control" ngModel>
 
     </div>
 
     <pre></pre>
 
-    <button class="btn btn-primary" type="submit">set parameters</button>
+    <button class="btn btn-primary" type="submit">load iframe</button>
 
   </form>
 
