--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
 
       <label for="srcUrl">iod src url</label><br>
 
-      <input id="srcUrl" type="text" name="srcUrl" class="form-control" ngModel>
+      <textarea rows="3" style="width: 500px" id="srcUrl" type="text" name="srcUrl" class="form-control" ngModel></textarea>
 
     </div>
 
